<resources>
    <string name="app_name">Horgász mobilalkalmazás</string>
    <string name="fooldal">Főoldal</string>
    <string name="halak">Halak</string>
    <string name="jatek">Játék</string>
    <string name="fogasok">Fogások</string>
    <string name="informacio">Információ</string>
    <string name="menu">Menü</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eredmenyek">Eredmények</string>
    <string name="kilepes">Kilépés</string>
    <string name="today_s_close_seasonal_fish">Mai tilalmi időszakos halak</string>
    <string name="details">Részletek</string>
    <string name="nezet">Nézet</string>
    <string name="kereses">Keresés</string>
    <string name="szures">Szűrés</string>
    <string name="kep">Kép</string>
    <string name="footer_text">Horgász mobilalkalmazás 2022.</string>
    <string name="back">Vissza</string>
    <string name="choose_level">Válassz szintet!</string>
    <string name="jatekosnev">Játékosnév</string>
    <string name="uj_jatekos">Új játékos</string>
    <string name="melyik_hal_van_a_kepen">Melyik hal van a képen?</string>
    <string name="mentes">Mentés</string>
    <string name="_1st_level">1. szint</string>
    <string name="_2nd_level">2. szint</string>
    <string name="_3rd_level">3. szint</string>
    <string name="_4th_level">4. szint</string>
    <string name="_5th_level">5. szint</string>
    <string name="_6th_level">6. szint</string>
    <string name="_7th_level">7. szint</string>
    <string name="_8th_level">8. szint</string>
    <string name="_9th_level">9. szint</string>
    <string name="_10th_level">10. szint</string>
    <string name="kovetkezo_szint">Következő szint</string>
    <string name="ujra">Újra</string>
    <string name="latinName">Latin név:</string>
    <string name="type">Típus:</string>
    <string name="minimumCatchSize">Legkisebb kifogható méret:</string>
    <string name="inCloseSeason">Tilalmi időszakban:</string>
    <string name="closeSeason">Tilalmi időszak:</string>
    <string name="icon">icon</string>
    <string name="filter">Szűrés</string>
    <string name="date">Időpont:</string>
    <string name="size">Méret:</string>
    <string name="weight">Tömeg:</string>
    <string name="bait">Csali:</string>
    <string name="location">Hely:</string>
    <string name="delete">Törlés</string>
    <string name="add">Hozzáadás</string>
    <string name="insert_new_catch">Új fogás hozzáadása</string>
    <string name="date_text">Dátum</string>
    <string name="species">Faj</string>
    <string name="size_cm">Méret (cm)</string>
    <string name="add_size_text">Add meg a méretet cm-ben!</string>
    <string name="weight_kg">Tömeg (kg)</string>
    <string name="add_weight_text">Add meg a tömeget kg-ban!</string>
    <string name="bait_text">Csali</string>
    <string name="add_bait_text">Add meg a csalit!</string>
    <string name="location_text">Helyszín</string>
    <string name="add_location_text">Add meg a helyszínt!</string>
    <string name="save">Mentés</string>
    <string name="cancel">Mégsem</string>
    <string name="information_description">Az alkalmazás a Szegedi Tudományegyetem diplomamunka céljából készült az Android Studioban, 2022-ben.\nKészítette: Radics Milán, mérnökinformatikus hallgató.\nTémavezető: Dr. Bilincki Vilmos.\nAz alkalmazás során felhasznált képek nem sajátok!\nKépek: Dr. Harka Ákos felvételei, Google.\nHalleírások: Nébih által ingyenesen elérhető horgászvizsgára való felkészülést segítő tankönyv, Wikipédia.\nTilalmi Időszakok: 2022. évi állami horgászjegy és fogási napló.</string>










</resources>