<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCatchActivity"
    android:background="@color/light_orange">

    <ScrollView
        android:layout_margin="5dp"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert_new_catch"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_text"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/catchDateFlagTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/catchDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/species"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/catchFlagTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:visibility="gone"
                android:textColor="@color/red"/>

            <Spinner
                android:id="@+id/catchSpeciesSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kep"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/catchImageView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/kep"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_image"
                    />

                <ImageView
                    android:id="@+id/selectPhotoImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/kep"
                    android:src="@drawable/ic_upload" />

                <ImageView
                    android:id="@+id/takePhotoImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/kep"
                    android:src="@drawable/ic_camera" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size_cm"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/catchSizeFlagTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:visibility="gone"
                android:textColor="@color/red"/>

            <EditText
                android:id="@+id/catchSizeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="yes"
                android:hint="@string/add_size_text"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight_kg"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/catchWeightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="yes"
                android:hint="@string/add_weight_text"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bait_text"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/catchBaitEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="yes"
                android:hint="@string/add_bait_text"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_text"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/catchLocationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="yes"
                android:hint="@string/add_location_text"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/saveCatchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_marginEnd="5dp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/cancelCatchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>