<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/light_orange"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jatekosnev"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"
                    />


                <EditText
                    android:id="@+id/userNameEditText"
                    android:autofillHints="username"
                    android:inputType="text"
                    android:hint="@string/jatekosnev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/labelText"
                    android:textAlignment="center"
                    android:background="@color/orange"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/saveUsernameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mentes"
                android:layout_gravity="end"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/choose_level"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/firstLevelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1st_level"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/secondLevelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2nd_level"
                android:layout_marginTop="5dp"
                android:enabled="false"
                android:drawableLeft="@drawable/ic_locked"
                android:drawableRight="@drawable/ic_locked"
                />

            <Button
                android:id="@+id/thirdLevelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3rd_level"
                android:layout_marginTop="5dp"
                android:enabled="false"
                android:drawableLeft="@drawable/ic_locked"
                android:drawableRight="@drawable/ic_locked"/>

            <Button
                android:id="@+id/fourthLevelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4th_level"
                android:layout_marginTop="5dp"
                android:enabled="false"
                android:drawableLeft="@drawable/ic_locked"
                android:drawableRight="@drawable/ic_locked"/>

            <Button
                android:id="@+id/fifthLevelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_5th_level"
                android:layout_marginTop="5dp"
                android:enabled="false"
                android:drawableLeft="@drawable/ic_locked"
                android:drawableRight="@drawable/ic_locked"/>

            <Button
                android:id="@+id/sixthLevelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6th_level"
                android:layout_marginTop="5dp"
                android:enabled="false"
                android:drawableLeft="@drawable/ic_locked"
                android:drawableRight="@drawable/ic_locked"/>

            <Button
                android:id="@+id/seventhButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_7th_level"
                android:layout_marginTop="5dp"
                android:enabled="false"
                android:drawableLeft="@drawable/ic_locked"
                android:drawableRight="@drawable/ic_locked"/>

            <Button
                android:id="@+id/eighthLevelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_8th_level"
                android:layout_marginTop="5dp"
                android:enabled="false"
                android:drawableLeft="@drawable/ic_locked"
                android:drawableRight="@drawable/ic_locked"/>

            <Button
                android:id="@+id/ninthLevelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_9th_level"
                android:layout_marginTop="5dp"
                android:enabled="false"
                android:drawableLeft="@drawable/ic_locked"
                android:drawableRight="@drawable/ic_locked"/>

            <Button
                android:id="@+id/tenthLevelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_10th_level"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:enabled="false"
                android:drawableLeft="@drawable/ic_locked"
                android:drawableRight="@drawable/ic_locked"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>