<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="5dp"
    android:id="@+id/fishListItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fishName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/fishLatinName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/fishImage"
        android:src="@drawable/viza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/kep"/>

    <Button
        android:id="@+id/fishDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/details"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textSize="30sp" />

</LinearLayout>